# ComputerVision

./: CMakeLists.txt  README.md
images/: dice.pnm
src/c/: CMakeLists.txt  compile.sh  main.c  mainCodecs.c  mainCodecs.cbp  mainSimplePNMOnly.c  mainSimplePNMOnly.cbp
src/c/Codecs/: bmpInput.h  codecs.h
src/cpp/: CMakeLists.txt  mainOpenCV.cbp  mainOpenCV.cpp  webcam.cbp  webcam.cpp
src/matlab/: main.m  processImage.m  readImageFromFile.m  writeImageToFile.m  writeResult.m
src/python/: mainOpenCV.py  mainOpenCVWebcam.py  produceAllSift.sh  sift.py
